--- a/Writer/build.gradle
+++ b/Writer/build.gradle
@@ -1,9 +1,13 @@
 plugins {
     id 'java'
     id 'jacoco'
+    id 'idea'
+    id "org.springframework.boot" version "2.2.0.RELEASE"
 }
 
 apply plugin: 'application'
+apply plugin: 'io.spring.dependency-management'
+
 group 'org.abondar.experimental'
 version '1.0'
 
@@ -11,23 +15,30 @@ mainClassName = 'org.abondar.experimental.document.sender.writer.WriterApplicati
 
 sourceCompatibility = 11
 
+bootJar {
+    archivesBaseName = 'writer'
+}
+
+
 repositories {
     mavenCentral()
 }
 
-//remove after spring-boot
-jar {
-    manifest {
-        attributes(
-                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-                'Main-Class': 'org.abondar.experimental.document.sender.writer.WriterApplication'
-        )
-    }
+test {
+    useJUnitPlatform()
 }
 
 dependencies {
     implementation "org.slf4j:slf4j-api:$slf4jVersion"
+
+    implementation "org.apache.tika:tika-parsers:$tikaVersion"
+
+    implementation "org.springframework.boot:spring-boot-starter"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+
+    testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion"
-    testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion"
 }
