pojo for document data, clean unit-tests for parser

--- a/Writer/build.gradle
+++ b/Writer/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'jacoco'
     id 'idea'
     id "org.springframework.boot" version "2.2.0.RELEASE"
+    id "io.freefair.lombok" version "4.1.4"
 }
 
 apply plugin: 'application'
