--- a/Writer/gradle.properties
+++ b/Writer/gradle.properties
@@ -2,3 +2,6 @@ junitJupiterVersion=5.4.2
 slf4jVersion=1.7.6
 tikaVersion=1.22
 avroVersion=1.9.1
+cxfVersion=3.3.4
+camelVersion=2.24.2
+jacksonVersion=2.9.8
