--- a/Reader/build.gradle
+++ b/Reader/build.gradle
@@ -27,5 +27,6 @@ repositories {
 dependencies {
     implementation "org.apache.camel:camel-core:$camelVersion"
     implementation "org.apache.camel:camel-kafka:$camelVersion"
+    implementation "org.apache.avro:avro-compiler:$avroVersion"
 
 }
