--- a/Reader/build.gradle
+++ b/Reader/build.gradle
@@ -1,24 +1,18 @@
 plugins {
     id 'java'
     id 'idea'
-
+    id "com.commercehub.gradle.plugin.avro" version "0.9.1"
+    id "io.freefair.lombok" version "4.1.4"
 }
 
-apply plugin: 'application'
 apply plugin: 'java'
 
 group 'org.abondar.experimental'
 version '1.0'
 
-mainClassName = 'org.abondar.experimental.document.sender.reader.Main'
 
 sourceCompatibility = 11
 
-jar {
-    manifest {
-        attributes 'Main-Class': 'org.abondar.experimental.document.sender.reader.Main'
-    }
-}
 
 repositories {
     mavenCentral()
@@ -30,3 +24,17 @@ dependencies {
     implementation "org.apache.avro:avro-compiler:$avroVersion"
 
 }
+
+jar {
+    from {
+        (configurations.runtime).collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+
+    manifest {
+        attributes 'Main-Class': 'org.abondar.experimental.document.sender.reader.Reader'
+    }
+
+}
+
