--- a/Reader/build.gradle
+++ b/Reader/build.gradle
@@ -2,17 +2,29 @@ plugins {
     id 'java'
     id 'idea'
     id "com.commercehub.gradle.plugin.avro" version "0.9.1"
-    id "io.freefair.lombok" version "4.1.4"
 }
 
-apply plugin: 'java'
+apply plugin: 'application'
 
 group 'org.abondar.experimental'
 version '1.0'
 
+mainClassName = 'org.abondar.experimental.document.sender.reader.Reader'
 
 sourceCompatibility = 11
 
+jar {
+    from
+        (configurations.runtime).collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+
+    manifest {
+        attributes 'Main-Class': 'org.abondar.experimental.document.sender.reader.Reader'
+    }
+
+}
 
 repositories {
     mavenCentral()
@@ -25,16 +37,5 @@ dependencies {
 
 }
 
-jar {
-    from {
-        (configurations.runtime).collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
 
-    manifest {
-        attributes 'Main-Class': 'org.abondar.experimental.document.sender.reader.Reader'
-    }
-
-}
 
