--- a/Reader/build.gradle
+++ b/Reader/build.gradle
@@ -14,7 +14,7 @@ mainClassName = 'org.abondar.experimental.document.sender.reader.Reader'
 sourceCompatibility = 11
 
 jar {
-    from
+    from{
         (configurations.runtime).collect {
             it.isDirectory() ? it : zipTree(it)
         }
