--- a/Writer/gradle.properties
+++ b/Writer/gradle.properties
@@ -1,8 +1,7 @@
-junitJupiterVersion=5.4.2
-slf4jVersion=1.7.6
-tikaVersion=1.22
-avroVersion=1.9.1
-cxfVersion=3.3.4
-camelVersion=2.24.2
-jacksonVersion=2.9.8
-jaxWsVersion=2.3.0
+tikaVersion=2.9.1
+avroVersion=1.0.14
+avroCompilerVersion=1.11.3
+camelVersion=4.2.0
+camelSwaggerVersion=3.21.2
+springBootVersion=3.2.0
+lombokVersion=8.4
