reader: switched to camel rest, added applications yaml, added KafkaProperties and logging

--- a/Writer/build.gradle
+++ b/Writer/build.gradle
@@ -42,7 +42,9 @@ dependencies {
     implementation "org.apache.camel:camel-swagger-java:$camelSwaggerVersion"
     implementation "org.apache.camel.springboot:camel-spring-boot-starter:$camelVersion"
     implementation "org.apache.camel.springboot:camel-jackson-starter:$camelVersion"
+    implementation("org.apache.camel.springboot:camel-servlet-starter:$camelVersion")
     implementation "org.apache.camel.springboot:camel-springdoc-starter:$camelVersion"
+    implementation("ch.qos.logback:logback-core:$logbackVersion")
 
 
     //test dependencies
