--- a/Reader/build.gradle
+++ b/Reader/build.gradle
@@ -22,6 +22,7 @@ jar {
         attributes 'Main-Class': 'org.abondar.experimental.document.sender.reader.Reader'
     }
 
+    duplicatesStrategy = DuplicatesStrategy.WARN
 }
 
 repositories {
