--- a/Writer/build.gradle
+++ b/Writer/build.gradle
@@ -1,10 +1,15 @@
 plugins {
+    id 'java'
+    id 'jacoco'
+    id 'idea'
     id "org.springframework.boot" version "$springBootVersion"
-    id "io.freefair.lombok" version "$lombokVersion"
 }
 
 apply plugin: 'application'
 apply plugin: 'io.spring.dependency-management'
+
+group 'org.abondar.experimental.documentsender'
+version '1.1'
 
 
 bootJar {
@@ -38,18 +43,17 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
     implementation "org.springframework.boot:spring-boot-starter-webflux"
-    implementation "org.springframework.boot:spring-boot-starter-security"
 
 
     implementation "org.apache.camel:camel-http:$camelVersion"
-    implementation "org.apache.camel.springboot:camel-swagger-java-starter:$camelSwaggerVersion"
+    implementation "org.apache.camel:camel-core:$camelVersion"
+    implementation "org.apache.camel:camel-kafka:$camelVersion"
+    implementation "org.apache.camel.springboot:camel-spring-boot-bom:$camelVersion"
     implementation "org.apache.camel.springboot:camel-spring-boot-starter:$camelVersion"
     implementation "org.apache.camel.springboot:camel-jackson-starter:$camelVersion"
     implementation "org.apache.camel.springboot:camel-servlet-starter:$camelVersion"
+    implementation "org.apache.camel.springboot:camel-swagger-java-starter:3.22.1"
     implementation "org.apache.camel.springboot:camel-springdoc-starter:$camelVersion"
-    implementation "org.apache.camel.springboot:camel-spring-security-starter:$camelVersion"
-    implementation "ch.qos.logback:logback-classic:$logbackVersion"
-    implementation "ch.qos.logback:logback-core:$logbackVersion"
 
     dependencies {
         implementation project(':Data')
